compiler/testData/diagnostics/tests/regressions/kt32205.kt
// FILE: A.java

public class A {
    public static void foo(A... values) {}
}

// FILE: test.kt

fun test(vararg values: A) {
    A.foo(*values)
    A.foo(<!TYPE_MISMATCH!>values<!>)
}
